# Calculator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  div.cpp  div.h  expressiontree.cpp  expressiontree.h  main.cpp  mult.cpp  mult.h  node.cpp  node.h  sub.cpp  sub.h  sum.cpp  sum.h
tests/: CMakeLists.txt  TestDiv.cpp  TestExpr.cpp  TestMult.cpp  TestSub.cpp  TestSum.cpp  test_calculator.cpp
